<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KiraFan Compatibility Checker</string>
    <string name="app_name_short_0">KRFCompatibilityChecker</string>

    <string name="menu_explanation">说明</string>
    <string name="green_words">绿字</string>
    <string name="green_words_expl">表示该因素不会影响KiraFan正常运行\n</string>
    <string name="yellow_words">黄字</string>
    <string name="yellow_words_expl">表示该因素可能影响或估计可能影响KiraFan正常运行\n</string>
    <string name="red_words">红字</string>
    <string name="red_words_expl">表示该因素会影响KiraFan正常运行</string>
    <string name="menu_about">关于</string>
    <string name="menu_checkupdate">检查更新</string>
    <string name="menu_settheme">设置主题</string>
    <string name="share_results">分享检测结果</string>
    <string name="check_results">检测结果</string>

    <string name="light">明亮</string>
    <string name="dark">深色</string>
    <string name="default_theme">默认（跟随系统设置）</string>
    <string name="dialog_ok">确定</string>

    <string name="know_it">知道了</string>
    <string name="i_know_it">我知道了</string>
    <string name="let_it_go_0">先不管</string>

    <string name="device">设备</string>
    <string name="device_info_notice">KiraFan对设备总运行内存的要求：2GB以上，建议使用3GB以上运行内存的设备以获得比较稳定的游戏体验。这里显示的运行内存大小为系统能读取到的值，会比设备标称值稍小一些。\nKiraFan可能只支持主流的ARMv8和ARMv7平台。</string>
    <string name="ram">运行内存</string>
    <string name="instructionset_supported">支持的指令集</string>

    <string name="system">系统</string>
    <string name="android_en">Android</string>
    <string name="android_info_notice">可安装KiraFan的Android版本：4.2以上。推荐使用Android5.0以上的设备进行游戏。\n若检测到系统一些属性为特定的值，KiraFan将不能正常启动。\nUSB调试需处于关闭状态。若USB调试处于开启状态，可点击USB调试条目直接打开开发者选项页面。\nKiraFan通过检测进程挂载信息检测Magisk，若从其他应用进程的挂载信息中检测到Magisk，系统可能存在漏洞（详见 https://medium.com/@topjohnwu/from-anime-game-to-android-system-security-vulnerability-9b955a182f20 ），请更新Magisk或更新系统。若从本应用进程的挂载信息中检测到Magisk，请确认是否在Magisk Hide中勾选了本应用。如果发现Magisk，点击该条目可查看详情。\nKiraFan还可能会检测一些可疑的文件和目录。如果发现，点击该条目可查看详情。</string>
    <string name="system_prop_detail">系统属性值详情</string>
    <string name="system_prop">系统属性值</string>
    <string name="system_prop_notice">已确认的要求：\npersist.sys.usb.config不能为adb\nro.build.type不能为eng\nro.debuggable需为0\nro.secure不能为0</string>
    <string name="how_to_modify_system_prop">如何修改系统属性值</string>
    <string name="method_to_modify_system_prop">修改系统属性值的方法</string>
    <string name="method_to_modify_system_prop_notice">方法一（推荐）：\n使用Magisk的resetprop：\n在终端模拟器输入su获取root权限，然后输入 resetprop 要修改的属性名 期望的属性值 即可，如果不想每次开机都输一遍可以把命令保存为一个sh文件存至/data/adb/post-fs-data.d/，改权限为0755，开机时Magisk会自动执行。\n\n方法二：\n参考 http://nga.178.com/read.php?tid=12443703 。</string>
    <string name="version">版本</string>
    <string name="usb_debug">USB调试</string>
    <string name="proc_mounts">进程挂载信息</string>
    <string name="magisk_found">发现Magisk</string>
    <string name="magisk_found_in_this_mounts">从本应用进程的挂载信息中检测到Magisk</string>
    <string name="magisk_found_in_other_mounts">从其他应用进程的挂载信息中检测到Magisk</string>
    <string name="magisk_not_found">未发现Magisk</string>
    <string name="files_may_detected">可能被检测到的文件和目录</string>
    <string name="found">发现</string>
    <string name="not_found">未发现</string>
    <string name="file_found">发现的文件</string>
    <string name="directory_found">发现的目录</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>

    <string name="load_xposed_toolkit">载入Xposed工具类</string>
    <string name="search_feature_dll">寻找特征动态链接库</string>
    <string name="code_stack_search_invoker">代码堆栈寻找调起者</string>
    <string name="check_xposed_install_status">检测Xposed安装情况</string>
    <string name="judge_system_method_hook">判定系统方法调用钩子</string>
    <string name="check_virtual_xposed">检测虚拟Xposed环境</string>
    <string name="search_xposed_runtime_lib">寻找Xposed运行库文件</string>
    <string name="kernel_search_xposed_link_lib">内核查找Xposed链接库</string>
    <string name="judge_envir_variable_chara_word">环境变量特征字判断</string>
    
    <string name="xposed_and_root">Xposed &amp; Root</string>
    <string name="xposed_and_root_info_notice">若检测到Xposed或Root，KiraFan将不能正常启动。请尽量不要刷入自带Root或Xposed的ROM，并卸干净装过的Root工具（如SuperSU）和Xposed框架。</string>
    <string name="xposed_root_refresh_notice">Xposed &amp; Root检测结果可能需要重启本应用乃至设备才能刷新。</string>
    <string name="root_solution">Root解决方案</string>
    <string name="root_notice">Magisk v17.2+：https://github.com/topjohnwu/Magisk\nMagisk Hide（需要Android4.4+？）勾选KiraFan，隐藏Magisk Manager。如果已安装Magisk，对本应用进行相同操作后强行停止本应用再打开以查看效果。</string>
    <string name="xposed_solution">Xposed解决方案</string>
    <string name="xposed_notice">1. EdXposed：https://github.com/ElderDrivers/EdXposed\n实测最新版EdXposed不做额外设置也可避免被应用检测到Xposed。\n若仍被检测到Xposed，建议使用EdXposed Manager，选择应用名单/白名单模式，黑名单勾选/白名单不勾选KiraFan，并对本应用进行相同操作后强行停止本应用再打开以查看效果。\n\n2. 太极：https://github.com/taichi-framework/TaiChi</string>
    <string name="do_need_root">离不开Root？</string>
    <string name="do_need_xposed">离不开Xposed？</string>
    <string name="no_xposed">你没有安装 Xposed !</string>
    <string name="found_xposed">你安装了 Xposed ! 可信度: %1$d/%2$d</string>
    <string name="root_check">Root检查</string>
    <string name="get_error">出错</string>
    <string name="item_no_root">未发现Root</string>
    <string name="item_found_root">发现Root</string>
    <string name="item_no_xposed">未发现Xposed</string>
    <string name="item_found_xposed">发现Xposed</string>
    <string name="about">由w568w开发... 最近微信的事儿闹得纷纷扬扬，这款应用可以让你了解你的防Xposed检测模块到底有没有效果。\n\nDEBUG INFO:PID=%1$d</string>
    <string name="donation">写这个应用也花了不少时间收集代码, 希望您能给我买根辣条，支持我后续的开发和防检测模块的开发进程...</string>
    <string name="project_homepage">项目主页</string>

    <string name="google_suite">Google套件</string>
    <string name="google_info_notice">若Google服务显示为不可用，可能是Google套件未安装、不完整或版本过旧。请注意：如果缺失Google套件但系统自带Google服务框架，也可能可以正常启动游戏，但不能课金和用Google账号进行引继。\n点击Google服务条目可查看isGooglePlayServicesAvailable的返回值，如果存在问题还会弹出Google服务的错误对话框。</string>
    <string name="google_service">Google服务</string>
    <string name="well">正常</string>
    <string name="abnormal">异常</string>
    <string name="available">可用</string>
    <string name="update_required">需升级</string>
    <string name="updating">正在升级</string>
    <string name="not_available">不可用</string>
    <string name="return_value">返回值</string>

    <string name="app_list">应用列表</string>
    <string name="app_list_info_notice">FGO会检测设备是否安装了在其黑名单中的应用（详见 https://medium.com/@topjohnwu/from-anime-game-to-android-system-security-vulnerability-9b955a182f20 ），KiraFan大概用的是同一套检测系统。如果该设备上有安装黑名单中的应用，这里会显示出来。点击显示出来的应用条目可选择直接卸载该应用。\n如果Magisk Manager被检测到，请在其设置中选择隐藏Magisk Manager。</string>
    <string name="magisk_manager_detected">检测到Magisk Manager</string>
    <string name="magisk_manager_advice">建议在其设置中选择隐藏Magisk Manager。</string>
    <string name="open_magisk_manager">打开Magisk Manager</string>
    <string name="uninstall_directly">直接卸载</string>
    <string name="black_list_apps_not_found">未发现黑名单应用</string>
    
    <string name="about___">关于……</string>
    <string name="about_kfcc">关于KiraFan Compatibility Checker</string>
    <string name="special_thanks">特别鸣谢</string>
    <string name="special_thanks__">特别鸣谢……</string>
    <string name="about_kfcc_message">一个帮助排查导致KiraFan Android客户端运行异常的原因的小工具 By 430CSJ。\n\n收集整理修改代码和改UI花了不少时间，现有的检测项目也基本覆盖到了我找到的因素。如果发现有没覆盖到的因素，可以在项目主页提Issue反馈。如果感觉本项目对你会有帮助，可以考虑给我打钱倒杯卡布奇诺……</string>
    <string name="about_kfcc_origin">KiraFan Compatibility Checker的产生离不开@w568w的Xposed Checker。</string>
    <string name="about_xposed_checker">关于Xposed Checker</string>
    <string name="xposed_checker_version">5</string>
    <string name="support_origin_author">捐赠支持w568w</string>
    <string name="about_donate_w568w">关于捐赠@w568w</string>
    <string name="alipay_donate">支付宝捐赠</string>
    <string name="alipay_pay">支付宝打钱</string>
    <string name="view_how_the_project">先看看此项目</string>
    <string name="not_give">不给</string>
    <string name="do_not_say_any_more">别说了。</string>
    <string name="seem_no_alipay_0">朋友你看起来大概是没有安装支付宝...</string>
    <string name="seem_no_alipay_1">似乎未安装支付宝……</string>

    <string name="update_already_latest">已安装最新版本</string>
    <string name="update_new_seg1">版本</string>
    <string name="checking_new_version">正在检查新版本……</string>
    <string name="update_new_seg3">更新取消</string>
    <string name="update_new_seg2">准备下载</string>
    <string name="update_error">更新出错</string>
    <string name="avail_update_found">发现新版本：</string>
    <string name="do_update">是否更新？</string>
    <string name="download_and_update">下载并更新</string>
    <string name="cancel_update">不更新</string>
    <string name="view_update_log">查看更新日志</string>
</resources>