<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/green_words"
        android:text="@string/green_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/green_words_expl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/yellow_words"
        android:text="@string/yellow_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/yellow_words_expl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/red_words"
        android:text="@string/red_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/red_words_expl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</RelativeLayout>
