<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moe.csj430.checkkirafancompatibility.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:text="@string/device"
                android:textSize="32sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/device_info"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="right"
                android:background="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <moe.csj430.checkkirafancompatibility.widget.WrapContentListView
                android:id="@+id/device_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:text="@string/android_en"
                android:textSize="32sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/android_info"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="right"
                android:background="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <moe.csj430.checkkirafancompatibility.widget.WrapContentListView
                android:id="@+id/android_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/xposed_and_root"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/xposed_and_root_info"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/ic_menu_info_details"
                android:gravity="right" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <moe.csj430.checkkirafancompatibility.widget.WrapContentListView
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="提醒：可信度低不代表存在Xposed的可能性低\n实际上，只要可信度不为0，就说明一定存在Xposed框架。" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="about"
                android:paddingRight="8dp"
                android:text="\@w568w"
                android:textColor="#0099cc" />

            <TextView

                android:id="@+id/donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:onClick="donation"
                android:text="捐赠支持一下"
                android:textColor="#33b5e5" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/google_suite"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/google_service_info"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/ic_menu_info_details"
                android:gravity="right" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <moe.csj430.checkkirafancompatibility.widget.WrapContentListView
                android:id="@+id/google_service_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:text="@string/app_list"
                android:textSize="32sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/app_detect_info"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="right"
                android:background="@android:drawable/ic_menu_info_details" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <moe.csj430.checkkirafancompatibility.widget.WrapContentListView
                android:id="@+id/app_detect_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
</LinearLayout>